--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -164,5 +164,7 @@
   "book": "Забронировать",
   "rent_terms_error": "Вы не можете продолжить без согласия с политикой конфиденциальности и условиями аренды",
   "place_of_birth": "Место рождения",
-  "completion_booking": "Завершение бронирования"
+  "completion_booking": "Завершение бронирования",
+  "update": "Обновить",
+  "please_update": "Пожалуйста, обновите Ваше приложение"
 }
