Added vehicle availability check

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -26,6 +26,7 @@
   "conditioner": "conditioner",
   "daily_tariff": "Daily tariff:",
   "limited_mileage": "Limited mileage:",
+  "unlimited_mileage": "No mileage limit",
   "deposit_caps": "Deposit:",
   "pickup_and_dropoff": "Receipt and return",
   "enter_address": "Enter the address",
@@ -89,7 +90,8 @@
   "on_map": "On map",
   "date_too_early": "No earlier date available",
   "no_available_cars": "No available cars. Please try set another dates.",
-  "car_on_request": "On request.\nVehicle availability will be confirmed within 24 hours.",
+  "on_request": "On request",
+  "car_on_request": "Vehicle availability will be confirmed within 24 hours.",
   "choose_car": "Choose a car",
   "choose_new_car": "Choose a new car",
   "personal_data": "Personal data",
