--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -26,6 +26,7 @@
   "conditioner": "кондиционер",
   "daily_tariff": "Суточный тариф:",
   "limited_mileage": "Ограниченный пробег:",
+  "unlimited_mileage": "Без ограничения пробега",
   "deposit_caps": "Депозит:",
   "pickup_and_dropoff": "Получение и возврат",
   "enter_address": "Укажите адрес",
@@ -89,7 +90,8 @@
   "on_map": "На карте",
   "date_too_early": "Нельзя выбрать более раннюю дату",
   "no_available_cars": "Нет доступных автомобилей. Пожалуйста, попробойте выбрать другие даты.",
-  "car_on_request": "Под запрос.\nНаличие автомобиля будет подтверждено в течении 24 часов.",
+  "on_request": "Под запрос",
+  "car_on_request": "Наличие автомобиля будет подтверждено в течении 24 часов.",
   "choose_car": "Выберите автомобиль",
   "choose_new_car": "Выберите новый автомобиль",
   "personal_data": "Личные данные",
